--- a/photo-editor/package.json
+++ b/photo-editor/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-screen-capture": "^1.1.1",
     "react-zoom-pan-pinch": "^3.1.0"
   },
   "devDependencies": {
